build/usd-sys/usd-c/include.in/pxr/usd/pcp/pcp_errors.h

typedef struct std__string_t_s std__string_t;
typedef std__string_t std_string_t;
enum pxrInternal_v0_21__pxrReserved____PcpErrorType_e {
    pxr_PcpErrorType_PcpErrorType_ArcCycle = 0,
    pxr_PcpErrorType_PcpErrorType_ArcPermissionDenied = 1,
    pxr_PcpErrorType_PcpErrorType_IndexCapacityExceeded = 2,
    pxr_PcpErrorType_PcpErrorType_ArcCapacityExceeded = 3,
    pxr_PcpErrorType_PcpErrorType_ArcNamespaceDepthCapacityExceeded = 4,
    pxr_PcpErrorType_PcpErrorType_InconsistentPropertyType = 5,
    pxr_PcpErrorType_PcpErrorType_InconsistentAttributeType = 6,
    pxr_PcpErrorType_PcpErrorType_InconsistentAttributeVariability = 7,
    pxr_PcpErrorType_PcpErrorType_InternalAssetPath = 8,
    pxr_PcpErrorType_PcpErrorType_InvalidPrimPath = 9,
    pxr_PcpErrorType_PcpErrorType_InvalidAssetPath = 10,
    pxr_PcpErrorType_PcpErrorType_InvalidInstanceTargetPath = 11,
    pxr_PcpErrorType_PcpErrorType_InvalidExternalTargetPath = 12,
    pxr_PcpErrorType_PcpErrorType_InvalidTargetPath = 13,
    pxr_PcpErrorType_PcpErrorType_InvalidReferenceOffset = 14,
    pxr_PcpErrorType_PcpErrorType_InvalidSublayerOffset = 15,
    pxr_PcpErrorType_PcpErrorType_InvalidSublayerOwnership = 16,
    pxr_PcpErrorType_PcpErrorType_InvalidSublayerPath = 17,
    pxr_PcpErrorType_PcpErrorType_InvalidVariantSelection = 18,
    pxr_PcpErrorType_PcpErrorType_MutedAssetPath = 19,
    pxr_PcpErrorType_PcpErrorType_OpinionAtRelocationSource = 20,
    pxr_PcpErrorType_PcpErrorType_PrimPermissionDenied = 21,
    pxr_PcpErrorType_PcpErrorType_PropertyPermissionDenied = 22,
    pxr_PcpErrorType_PcpErrorType_SublayerCycle = 23,
    pxr_PcpErrorType_PcpErrorType_TargetPermissionDenied = 24,
    pxr_PcpErrorType_PcpErrorType_UnresolvedPrimPath = 25,
};
typedef struct pxrInternal_v0_21__pxrReserved____PcpErrorBase_t_s {
    char _unused;
} USD_CPPMM_ALIGN(8) pxrInternal_v0_21__pxrReserved____PcpErrorBase_t;
typedef pxrInternal_v0_21__pxrReserved____PcpErrorBase_t pxr_PcpErrorBase_t;
typedef struct pxrInternal_v0_21__pxrReserved____PcpErrorArcCycle_t_s {
    char _unused;
} USD_CPPMM_ALIGN(8) pxrInternal_v0_21__pxrReserved____PcpErrorArcCycle_t;
typedef pxrInternal_v0_21__pxrReserved____PcpErrorArcCycle_t pxr_PcpErrorArcCycle_t;
typedef struct pxrInternal_v0_21__pxrReserved____PcpErrorArcPermissionDenied_t_s {
    char _unused;
} USD_CPPMM_ALIGN(8) pxrInternal_v0_21__pxrReserved____PcpErrorArcPermissionDenied_t;
typedef pxrInternal_v0_21__pxrReserved____PcpErrorArcPermissionDenied_t pxr_PcpErrorArcPermissionDenied_t;
typedef struct pxrInternal_v0_21__pxrReserved____PcpErrorCapacityExceeded_t_s {
    char _unused;
} USD_CPPMM_ALIGN(8) pxrInternal_v0_21__pxrReserved____PcpErrorCapacityExceeded_t;
typedef pxrInternal_v0_21__pxrReserved____PcpErrorCapacityExceeded_t pxr_PcpErrorCapacityExceeded_t;
typedef struct pxrInternal_v0_21__pxrReserved____PcpErrorInconsistentPropertyBase_t_s {
    char _unused;
} USD_CPPMM_ALIGN(8) pxrInternal_v0_21__pxrReserved____PcpErrorInconsistentPropertyBase_t;
typedef pxrInternal_v0_21__pxrReserved____PcpErrorInconsistentPropertyBase_t pxr_PcpErrorInconsistentPropertyBase_t;
typedef struct pxrInternal_v0_21__pxrReserved____PcpErrorInconsistentPropertyType_t_s {
    char _unused;
} USD_CPPMM_ALIGN(8) pxrInternal_v0_21__pxrReserved____PcpErrorInconsistentPropertyType_t;
typedef pxrInternal_v0_21__pxrReserved____PcpErrorInconsistentPropertyType_t pxr_PcpErrorInconsistentPropertyType_t;
typedef struct pxrInternal_v0_21__pxrReserved____PcpErrorInconsistentAttributeType_t_s {
    char _unused;
} USD_CPPMM_ALIGN(8) pxrInternal_v0_21__pxrReserved____PcpErrorInconsistentAttributeType_t;
typedef pxrInternal_v0_21__pxrReserved____PcpErrorInconsistentAttributeType_t pxr_PcpErrorInconsistentAttributeType_t;
typedef struct pxrInternal_v0_21__pxrReserved____PcpErrorInconsistentAttributeVariability_t_s {
    char _unused;
} USD_CPPMM_ALIGN(8) pxrInternal_v0_21__pxrReserved____PcpErrorInconsistentAttributeVariability_t;
typedef struct pxrInternal_v0_21__pxrReserved____PcpErrorInternalAssetPath_t_s {
    char _unused;
} USD_CPPMM_ALIGN(8) pxrInternal_v0_21__pxrReserved____PcpErrorInternalAssetPath_t;
typedef struct pxrInternal_v0_21__pxrReserved____PcpErrorInvalidPrimPath_t_s {
    char _unused;
} USD_CPPMM_ALIGN(8) pxrInternal_v0_21__pxrReserved____PcpErrorInvalidPrimPath_t;
typedef struct pxrInternal_v0_21__pxrReserved____PcpErrorInvalidAssetPathBase_t_s {
    char _unused;
} USD_CPPMM_ALIGN(8) pxrInternal_v0_21__pxrReserved____PcpErrorInvalidAssetPathBase_t;
typedef struct pxrInternal_v0_21__pxrReserved____PcpErrorInvalidAssetPath_t_s {
    char _unused;
} USD_CPPMM_ALIGN(8) pxrInternal_v0_21__pxrReserved____PcpErrorInvalidAssetPath_t;
typedef struct pxrInternal_v0_21__pxrReserved____PcpErrorMutedAssetPath_t_s {
    char _unused;
} USD_CPPMM_ALIGN(8) pxrInternal_v0_21__pxrReserved____PcpErrorMutedAssetPath_t;
typedef struct pxrInternal_v0_21__pxrReserved____PcpErrorTargetPathBase_t_s {
    char _unused;
} USD_CPPMM_ALIGN(8) pxrInternal_v0_21__pxrReserved____PcpErrorTargetPathBase_t;
typedef struct pxrInternal_v0_21__pxrReserved____PcpErrorInvalidInstanceTargetPath_t_s {
    char _unused;
} USD_CPPMM_ALIGN(8) pxrInternal_v0_21__pxrReserved____PcpErrorInvalidInstanceTargetPath_t;
typedef struct pxrInternal_v0_21__pxrReserved____PcpErrorInvalidExternalTargetPath_t_s {
    char _unused;
} USD_CPPMM_ALIGN(8) pxrInternal_v0_21__pxrReserved____PcpErrorInvalidExternalTargetPath_t;
typedef struct pxrInternal_v0_21__pxrReserved____PcpErrorInvalidTargetPath_t_s {
    char _unused;
} USD_CPPMM_ALIGN(8) pxrInternal_v0_21__pxrReserved____PcpErrorInvalidTargetPath_t;
typedef struct pxrInternal_v0_21__pxrReserved____PcpErrorInvalidSublayerOffset_t_s {
    char _unused;
} USD_CPPMM_ALIGN(8) pxrInternal_v0_21__pxrReserved____PcpErrorInvalidSublayerOffset_t;
typedef struct pxrInternal_v0_21__pxrReserved____PcpErrorInvalidReferenceOffset_t_s {
    char _unused;
} USD_CPPMM_ALIGN(8) pxrInternal_v0_21__pxrReserved____PcpErrorInvalidReferenceOffset_t;
typedef struct pxrInternal_v0_21__pxrReserved____PcpErrorInvalidSublayerOwnership_t_s {
    char _unused;
} USD_CPPMM_ALIGN(8) pxrInternal_v0_21__pxrReserved____PcpErrorInvalidSublayerOwnership_t;
typedef struct pxrInternal_v0_21__pxrReserved____PcpErrorInvalidSublayerPath_t_s {
    char _unused;
} USD_CPPMM_ALIGN(8) pxrInternal_v0_21__pxrReserved____PcpErrorInvalidSublayerPath_t;
typedef struct pxrInternal_v0_21__pxrReserved____PcpErrorInvalidVariantSelection_t_s {
    char _unused;
} USD_CPPMM_ALIGN(8) pxrInternal_v0_21__pxrReserved____PcpErrorInvalidVariantSelection_t;
typedef struct pxrInternal_v0_21__pxrReserved____PcpErrorOpinionAtRelocationSource_t_s {
    char _unused;
} USD_CPPMM_ALIGN(8) pxrInternal_v0_21__pxrReserved____PcpErrorOpinionAtRelocationSource_t;
typedef struct pxrInternal_v0_21__pxrReserved____PcpErrorPrimPermissionDenied_t_s {
    char _unused;
} USD_CPPMM_ALIGN(8) pxrInternal_v0_21__pxrReserved____PcpErrorPrimPermissionDenied_t;
typedef struct pxrInternal_v0_21__pxrReserved____PcpErrorPropertyPermissionDenied_t_s {
    char _unused;
} USD_CPPMM_ALIGN(8) pxrInternal_v0_21__pxrReserved____PcpErrorPropertyPermissionDenied_t;
typedef struct pxrInternal_v0_21__pxrReserved____PcpErrorSublayerCycle_t_s {
    char _unused;
} USD_CPPMM_ALIGN(8) pxrInternal_v0_21__pxrReserved____PcpErrorSublayerCycle_t;
typedef struct pxrInternal_v0_21__pxrReserved____PcpErrorTargetPermissionDenied_t_s {
    char _unused;
} USD_CPPMM_ALIGN(8) pxrInternal_v0_21__pxrReserved____PcpErrorTargetPermissionDenied_t;
typedef struct pxrInternal_v0_21__pxrReserved____PcpErrorUnresolvedPrimPath_t_s {
    char _unused;
} USD_CPPMM_ALIGN(8) pxrInternal_v0_21__pxrReserved____PcpErrorUnresolvedPrimPath_t;
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____PcpErrorBase_dtor(
    pxr_PcpErrorBase_t * this_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____PcpErrorBase_ToString(
    pxr_PcpErrorBase_t const * this_
    , std_string_t * * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____PcpErrorBase_ShouldReportAtMostOnce(
    pxr_PcpErrorBase_t const * this_
    , _Bool * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____PcpErrorArcCycle_ToString(
    pxr_PcpErrorArcCycle_t const * this_
    , std_string_t * * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____PcpErrorArcCycle_ShouldReportAtMostOnce(
    pxr_PcpErrorArcCycle_t const * this_
    , _Bool * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____PcpErrorArcCycle_dtor(
    pxr_PcpErrorArcCycle_t * this_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____PcpErrorArcCycle_copy(
    pxr_PcpErrorArcCycle_t * * this_
    , pxr_PcpErrorArcCycle_t const * rhs);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____PcpErrorArcPermissionDenied_ToString(
    pxr_PcpErrorArcPermissionDenied_t const * this_
    , std_string_t * * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____PcpErrorArcPermissionDenied_ShouldReportAtMostOnce(
    pxr_PcpErrorArcPermissionDenied_t const * this_
    , _Bool * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____PcpErrorArcPermissionDenied_dtor(
    pxr_PcpErrorArcPermissionDenied_t * this_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____PcpErrorArcPermissionDenied_copy(
    pxr_PcpErrorArcPermissionDenied_t * * this_
    , pxr_PcpErrorArcPermissionDenied_t const * rhs);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____PcpErrorCapacityExceeded_ToString(
    pxr_PcpErrorCapacityExceeded_t const * this_
    , std_string_t * * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____PcpErrorCapacityExceeded_ShouldReportAtMostOnce(
    pxr_PcpErrorCapacityExceeded_t const * this_
    , _Bool * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____PcpErrorCapacityExceeded_dtor(
    pxr_PcpErrorCapacityExceeded_t * this_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____PcpErrorCapacityExceeded_copy(
    pxr_PcpErrorCapacityExceeded_t * * this_
    , pxr_PcpErrorCapacityExceeded_t const * rhs);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____PcpErrorInconsistentPropertyBase_ToString(
    pxr_PcpErrorInconsistentPropertyBase_t const * this_
    , std_string_t * * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____PcpErrorInconsistentPropertyBase_ShouldReportAtMostOnce(
    pxr_PcpErrorInconsistentPropertyBase_t const * this_
    , _Bool * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____PcpErrorInconsistentPropertyBase_dtor(
    pxr_PcpErrorInconsistentPropertyBase_t * this_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____PcpErrorInconsistentPropertyType_ToString(
    pxr_PcpErrorInconsistentPropertyType_t const * this_
    , std_string_t * * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____PcpErrorInconsistentPropertyType_ShouldReportAtMostOnce(
    pxr_PcpErrorInconsistentPropertyType_t const * this_
    , _Bool * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____PcpErrorInconsistentPropertyType_dtor(
    pxr_PcpErrorInconsistentPropertyType_t * this_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____PcpErrorInconsistentPropertyType_copy(
    pxr_PcpErrorInconsistentPropertyType_t * * this_
    , pxr_PcpErrorInconsistentPropertyType_t const * rhs);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____PcpErrorInconsistentAttributeType_ToString(
    pxr_PcpErrorInconsistentAttributeType_t const * this_
    , std_string_t * * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____PcpErrorInconsistentAttributeType_ShouldReportAtMostOnce(
    pxr_PcpErrorInconsistentAttributeType_t const * this_
    , _Bool * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____PcpErrorInconsistentAttributeType_dtor(
    pxr_PcpErrorInconsistentAttributeType_t * this_);